Fix webkitGetEntry for non-native files.

Previously webkitGetEntry was broken for non-native files. The method
creates FileEntry in isolated file system from DataTransferItem. The
problem is DataTransferItem only has file system ID of isolated file
system containing native files, though the browser process prepares
different isolated file system for non-native files.

The CL adds new field 'fileSystemId' for types representing a non-native
file and let webkitGetEntry refer the fileSystemId so that it can return
valid FileEntry for non-native files.

BUG=671811
TEST=Drop a file from Chrome OS Files app to Google Drive web.

Review-Url: https://codereview.chromium.org/2565283002
Cr-Commit-Position: refs/heads/master@{#438455}
(cherry picked from commit da08349d4b87496c619152256ab039f6f6d2f28b)

Review-Url: https://codereview.chromium.org/2582463002 .
Cr-Commit-Position: refs/branch-heads/2924@{#508}
Cr-Branched-From: 3a87aecc31cd1ffe751dd72c04e5a96a1fc8108a-refs/heads/master@{#433059}